--- a/region-test-2.html
+++ b/region-test-2.html
@@ -25,6 +25,8 @@
                 margin-bottom: 0px !important;
                 padding-bottom: 0px !important;
                 border-bottom: none !important;
+                border-bottom-left-radius: 0px !important;
+                border-bottom-right-radius: 0px !important;
             }
             
             [data-css-continued-fragment]::after {
@@ -40,6 +42,8 @@
                 margin-top: 0px !important;
                 padding-top: 0px !important;
                 border-top: none !important;
+                border-top-left-radius: 0px !important;
+                border-top-right-radius: 0px !important;
             }
             
             [data-css-starting-fragment]::before {
