First working implementation of css-syntax and css-cascade!

--- a/region-test-6.html
+++ b/region-test-6.html
@@ -56,6 +56,10 @@
                 display: none !important;
             }
             
+            #content {
+                flow-into: page content;
+            }
+            
         </style>
     </head>
     <body>
