Small fix for unlikely case the author do something stupid

--- a/region-test-6.html
+++ b/region-test-6.html
@@ -20,7 +20,7 @@
                 border: 10px solid red;
             }
             
-            [data-css-region] > *, [data-css-regions-fragment-source] {
+            cssregion, [data-css-region] > *, [data-css-regions-fragment-source] {
                 display: none !important;
             }
             
