Added: support for the "region-break" property

--- a/region-test-6.html
+++ b/region-test-6.html
@@ -15,6 +15,7 @@
             #region3 {
                 background: yellow; color: red;
                 max-height: 150px;
+                region-fragment: break;
             }
             #regions {
                 border: 10px solid red;
