--- a/region-test-6.html
+++ b/region-test-6.html
@@ -123,6 +123,6 @@
         <script src="j/css-break.js"></script>
         <script src="j/css-regions-helpers.js"></script>
         <script src="j/css-regions.js"></script>
-        <script src="j/css-regions-flow.js"></script>
+        <script src="j/css-regions-objectmodel.js"></script>
     </body>
 </html>
