Update the test cases to avoid Chrome firing XHR exception in local

--- a/region-test-2.html
+++ b/region-test-2.html
@@ -23,7 +23,7 @@
             #content { flow-into: page-content content; }
             
         </style>
-        <link rel="stylesheet" href="s/css-regions.css" data-TODO="remove this" />
+        <link rel="stylesheet" href="s/css-regions.css" data-no-css-polyfill="true" data-TODO="remove this" />
     </head>
     <body>
         <div id='content' style='display: none'>
