--- a/region-test-3.html
+++ b/region-test-3.html
@@ -24,7 +24,7 @@
             #regions > div { flow-from: page-content; }
             
         </style>
-        <link rel="stylesheet" href="s/css-regions.css" data-TODO="remove this" />
+        <link rel="stylesheet" href="s/css-regions.css" data-no-css-polyfill="true" data-TODO="remove this" />
     </head>
     <body>
         <div id='content' style='display: none'>
