--- a/region-test-7.html
+++ b/region-test-7.html
@@ -38,7 +38,7 @@
             }
             
         </style>
-        <link rel="stylesheet" href="s/css-regions.css" data-TODO="remove this" />
+        <link rel="stylesheet" href="s/css-regions.css" data-no-css-polyfill="true" data-TODO="remove this" />
     </head>
     <body 
         onclick="var c=document.getElementById('content'); c.appendChild(c.firstElementChild.cloneNode(true));"
