Achieve the promise of a one-script polyfill

--- a/region-test-2.html
+++ b/region-test-2.html
@@ -23,7 +23,6 @@
             #content { flow-into: page-content content; }
             
         </style>
-        <link rel="stylesheet" href="s/css-regions.css" data-no-css-polyfill="true" data-TODO="remove this" />
     </head>
     <body>
         <div id='content' style='display: none'>
@@ -36,13 +35,6 @@
         <hr/>
         <div id="region3"></div>
         
-        <script src="j/range-extensions.js"></script>
-        <script src="j/css-syntax.js"></script>
-        <script src="j/css-cascade.js"></script>
-        <script src="j/css-selectors.js"></script>
-        <script src="j/css-break.js"></script>
-        <script src="j/css-regions-helpers.js"></script>
-        <script src="j/css-regions.js"></script>
-        <script src="j/css-regions-objectmodel.js"></script>
+        <script src="cssregions.js"></script>
     </body>
 </html>
