--- a/region-test-6.html
+++ b/region-test-6.html
@@ -38,7 +38,6 @@
             }
             
         </style>
-        <link rel="stylesheet" href="s/css-regions.css" data-no-css-polyfill="true" data-TODO="remove this" />
     </head>
     <body 
         onclick="var c=document.getElementById('content'); c.appendChild(c.firstElementChild.cloneNode(true));"
@@ -67,13 +66,6 @@
             <div id="region3"></div>
         </div>
         
-        <script src="j/range-extensions.js"></script>
-        <script src="j/css-syntax.js"></script>
-        <script src="j/css-cascade.js"></script>
-        <script src="j/css-selectors.js"></script>
-        <script src="j/css-break.js"></script>
-        <script src="j/css-regions-helpers.js"></script>
-        <script src="j/css-regions.js"></script>
-        <script src="j/css-regions-objectmodel.js"></script>
+        <script src="cssregions.js"></script>
     </body>
 </html>
