--- a/w3tests/extract-list-items-013.html
+++ b/w3tests/extract-list-items-013.html
@@ -62,12 +62,5 @@
 		</div>
 		<div id="r1" class="region"></div>
 	
-    <script src="../j/range-extensions.js"></script>
-    <script src="../j/css-syntax.js"></script>
-    <script src="../j/css-cascade.js"></script>
-    <script src="../j/css-selectors.js"></script>
-    <script src="../j/css-break.js"></script>
-    <script src="../j/css-regions-helpers.js"></script>
-    <script src="../j/css-regions.js"></script>
-    <script src="../j/css-regions-objectmodel.js"></script>
+    <script src="../cssregions.min.js"></script>
 </body></html>
