--- a/region-test-5.html
+++ b/region-test-5.html
@@ -39,13 +39,6 @@
             <div id="region3"></div>
         </div>
         
-        <script src="j/range-extensions.js"></script>
-        <script src="j/css-syntax.js"></script>
-        <script src="j/css-cascade.js"></script>
-        <script src="j/css-selectors.js"></script>
-        <script src="j/css-break.js"></script>
-        <script src="j/css-regions-helpers.js"></script>
-        <script src="j/css-regions.js"></script>
-        <script src="j/css-regions-objectmodel.js"></script>
+        <script src="cssregions.js"></script>
     </body>
 </html>
