Updated more examples to use unprefixed properties

--- a/examples/breaking-news/index.html
+++ b/examples/breaking-news/index.html
@@ -17,8 +17,7 @@
 
         .breaking {
             background: yellow;
-            -adobe-flow-into: breaking-news;
-            -webkit-flow-into: breaking-news;
+            flow-into: breaking-news;
         }
 
         .stories,
@@ -29,8 +28,7 @@
 
         /* show only breaking news */
         .breaking-news{
-            -adobe-flow-from: breaking-news;
-            -webkit-flow-from: breaking-news;
+            flow-from: breaking-news;
         }
 
         p {
