--- a/examples/mixed-content/index.html
+++ b/examples/mixed-content/index.html
@@ -30,16 +30,12 @@ limitations under the License.
         }
 
         #source {
-            -adobe-flow-into: article;
-            -webkit-flow-into: article;
-            -ms-flow-into: article;
+            flow-into: article;
             clear: both;
         }
 
         .myregions {
-            -adobe-flow-from: article;
-            -webkit-flow-from: article;
-            -ms-flow-from: article;
+            flow-from: article;
             float: left;
             width: 25%;
             min-width: 200px;
