--- a/examples/the-first-example/index.html
+++ b/examples/the-first-example/index.html
@@ -25,9 +25,7 @@
             width: 67%;
         }
         #source {
-            -adobe-flow-into: article;
-            -webkit-flow-into: article;
-            -ms-flow-into: article;
+            flow-into: article;
             clear: both;
         }
         .clear {
@@ -57,9 +55,7 @@
         }
 
         .myregions {
-            -adobe-flow-from: article;
-            -webkit-flow-from: article;
-            -ms-flow-from: article;
+            flow-from: article;
             background-color: #dedede;
             margin: 0px 2% 2% 0px;
             padding: 6px;
