Fixed huge slowness of generated content detection code in webkit
Includes a new code to make sure a frame is painted on screen at least
every 60ms (ie: move to async!)

--- a/w3tests/extract-numbered-paragraphs.htm
+++ b/w3tests/extract-numbered-paragraphs.htm
@@ -40,5 +40,5 @@
 		</div>
 		<div id="region"></div>
 	
-    <script src="../cssregions.min.js"></script>
+    <script src="../cssregions.js"></script>
 </body></html>
