--- a/w3tests/extract-numbered-paragraphs-divs-001.htm
+++ b/w3tests/extract-numbered-paragraphs-divs-001.htm
@@ -45,5 +45,5 @@
 		</div>
 		<div id="region"></div>
 	
-    <script src="../cssregions.min.js"></script>
+    <script src="../cssregions.js"></script>
 </body></html>
