Update path to polyfill

--- a/tests/region-test-1.html
+++ b/tests/region-test-1.html
@@ -44,6 +44,6 @@
         <hr/>
         <div id="region3"></div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
     </body>
 </html>
