--- a/tests/region-test-10.html
+++ b/tests/region-test-10.html
@@ -40,6 +40,6 @@
             <div id="region3"></div>
         </div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
     </body>
 </html>
