--- a/tests/region-test-2.html
+++ b/tests/region-test-2.html
@@ -35,6 +35,6 @@
         <hr/>
         <div id="region3"></div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
     </body>
 </html>
