--- a/tests/region-test-7.html
+++ b/tests/region-test-7.html
@@ -70,7 +70,7 @@
             <div id="region3"></div>
         </div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
         <script>
             
             var f = document.getNamedFlow('page-content');
