--- a/tests/region-test-5.html
+++ b/tests/region-test-5.html
@@ -39,6 +39,6 @@
             <div id="region3"></div>
         </div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
     </body>
 </html>
