--- a/tests/region-test-6.html
+++ b/tests/region-test-6.html
@@ -66,6 +66,6 @@
             <div id="region3"></div>
         </div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
     </body>
 </html>
