--- a/tests/region-test-9.html
+++ b/tests/region-test-9.html
@@ -72,7 +72,7 @@
             <div id="region3"></div>
         </div>
         
-        <script src="cssregions.js"></script>
+        <script src="../cssregions.js"></script>
         <script>
             
             var f = document.getNamedFlow('page-content');
