Allow to debug on the phone

--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -126,6 +126,11 @@
 
         </style>
 
+        <script>
+            window.onerror = function() {
+                alert([].slice.call(arguments,0).join("\n"))
+            }
+        </script>
         <script src="../../cssregions.js"></script>
         <script type="text/javascript">
             
