--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -127,7 +127,7 @@
 
         <script>
             window.console = window.console || {
-                log: function(x) { alert(x); }
+                log: function(x) { alert(x); },
                 dir: function(x) { alert(JSON.stringify(x)); }
             }
             window.onerror = function() {
