--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -133,6 +133,7 @@
             window.onerror = function() {
                 alert([].slice.call(arguments,0).join("\n"))
             }
+            console.log("start")
         </script>
         <script src="../../cssregions.js"></script>
         <script type="text/javascript">
