Also silent errors (JSON.stringify doesn't like circular stuffs)

--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -128,12 +128,11 @@
         <script>
             window.console = window.console || {
                 log: function(x) { if(false) alert(x); },
-                dir: function(x) { this.log(JSON.stringify(x)); }
+                dir: function(x) { try { this.log(JSON.stringify(x)); } catch(ex) { this.log(x) } }
             }
             window.onerror = function() {
-                alert([].slice.call(arguments,0).join("\n"))
+                console.log([].slice.call(arguments,0).join("\n"))
             }
-            console.log("start")
         </script>
         <script src="../../cssregions.js"></script>
         <script type="text/javascript">
