--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -8,7 +8,7 @@
     -->
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=800, initial-scale=1">
+        <meta name="viewport" content="width=800">
         <title>Paginated Content</title>
 
         <style>
