--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -9,6 +9,11 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=800">
+        <style>
+        @-ms-viewport { width: 800px; }
+        @viewport { width: 800px; }
+        </style>
+        
         <title>Paginated Content</title>
 
         <style>
