--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -8,10 +8,10 @@
     -->
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=800">
+        <meta name="viewport" content="width=640, user-scalable=no, user-zoom: fixed">
         <style>
-        @-ms-viewport { width: 800px; }
-        @viewport { width: 800px; }
+        @-ms-viewport { width: 640px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
+        @viewport { width: 640px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
         </style>
         
         <title>Paginated Content</title>
