--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=800, user-scalable=no">
-        <meta name="Viewport" content="width=800; user-scalable=no">
+        <meta name=”MobileOptimized” content=”800” />
+        <meta name="Viewport" content="width=800, user-scalable=no">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
         <style>
         @-ms-viewport { width: 800px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
         @viewport { width: 800px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
