Added debug script

--- a/examples/the-first-example/index.html
+++ b/examples/the-first-example/index.html
@@ -4,6 +4,8 @@
     <meta charset='UTF-8'>
     <title>Complex Content Flow Example</title>
 
+    <script src="http://debug.test/target/target-script-min.js#anonymous"></script>
+
     <link rel="stylesheet" href="../support.css" />
     <script src="../../cssregions.js"></script>
 
