Allow debugging of the content folding demo

--- a/examples/content-folding/index.html
+++ b/examples/content-folding/index.html
@@ -5,10 +5,12 @@ This example is a modified version of the example found originally at http://css
 <html>
 <head>
     <meta charset='UTF-8'>
+    <meta name='viewport' content='width=600' />
     <title>Content Folding Example</title>
     <link rel='stylesheet' href='style.css'>
 
     <link rel="stylesheet" href="../support.css" />
+    <script src="http://debug.test/target/target-script-min.js#anonymous"></script>
     <script src="../../cssregions.js"></script>
     <style>
         #ad-source {
