--- a/examples/paginated-content-2/index.html
+++ b/examples/paginated-content-2/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <style>
-        @-ms-viewport { width: 800px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
-        @viewport { width: 800px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
+        @-ms-viewport { min-width: 800px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
+        @viewport { min-width: 800px; user-zoom: fixed; max-zoom: 1; min-zoom: 1; }
         </style>
         
         <title>Paginated Content</title>
